# oxide-ci

./: .gitignore  .oxideci.toml  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/modules/: audit.rs  coverage.rs  hooks.rs  k8s_lint.rs  mod.rs  scanner.rs
src/utils/: config.rs  files.rs  mod.rs  terminal.rs
tests/: integration_test.rs
