[package]
name = "oxide-ci"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
ignore = "0.4.25"
indicatif = "0.18.4"
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
ureq = "2"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
